intro works (as another things)

--- a/smapper.plugin1/content/concept1.xhtml
+++ b/smapper.plugin1/content/concept1.xhtml
@@ -8,8 +8,8 @@
   </head>
 
 <body>
-<h1>Welcome to Smapper</h1>
+<h1>Welcome to RCP Product</h1>
 <h4>Concept One</h4>
-<p>About Smapper Picture Browser </p>
+<p>This is where Concept One is explained.</p>
 </body>
 </html>
