--- a/smapper.plugin1/content/concept3.xhtml
+++ b/smapper.plugin1/content/concept3.xhtml
@@ -18,7 +18,7 @@ to grab an XHTML element with id "firstH4" from an intro page with id "root". --
 <include path="root/firstLink" />
 <br />
 <!-- This is where we use the Intro dynamicContent element. The class is loaded from the specified plugin. --> 
-<contentProvider id="contentProviderId" class="test.intro.DynamicContentProvider" pluginId="test"> 
+<contentProvider id="contentProviderId" class="ttest.intro.DynamicContentProvider" pluginId="ttest"> 
 </contentProvider> 
 </p>
 
