--- a/smapper.plugin1/content/concept1.xhtml
+++ b/smapper.plugin1/content/concept1.xhtml
@@ -8,8 +8,8 @@
   </head>
 
 <body>
-<h1>Welcome to RCP Product</h1>
-<h4>Concept One</h4>
-<p>This is where Concept One is explained.</p>
+<h1>Learn about Instagramm Web Services..</h1>
+<h4></h4>
+<p></p>
 </body>
 </html>
