--- a/smapper.plugin1/content/concept2.xhtml
+++ b/smapper.plugin1/content/concept2.xhtml
@@ -8,8 +8,8 @@
   </head>
 
 <body>
-<h1>Welcome to RCP Product</h1>
-<h4>Concept Two</h4>
-<p>This is where Concept Two is explained.</p>
+<h1>Learn how Smapper works...</h1>
+<h4></h4>
+<p></p>
 </body>
 </html>
