--- a/smapper.plugin1/content/root.xhtml
+++ b/smapper.plugin1/content/root.xhtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -9,18 +9,18 @@
   </head>
 
 <body> 
-<h1>Welcome to RCP Product</h1>
+<h1>Welcome to Smapper Instagramm Tool</h1>
 <div class="page-style">
   <div id="content"> 	
 	
 		<a href="http://org.eclipse.ui.intro/showPage?id=concept1" id="firstLink">
 			<img border="0" src="link_obj.gif" alt="Concept1" />
-			Learn about Concept One... 
+			Learn about Instagramm Web Services... 
 		</a>
 	
 		<a href="http://org.eclipse.ui.intro/showPage?id=concept2">
 			<img border="0" src="link_obj.gif" alt="Concept2" />
-			Learn about Concept Two...</a>
+			Learn how Smapper works...</a>
 	<anchor id="anchor1" /> 
   </div> 
 </div>
