--- a/smapper.plugin1/content/extContent.xhtml
+++ b/smapper.plugin1/content/extContent.xhtml
@@ -8,8 +8,8 @@
   </head>
 
 <body>
-<a href="http://org.eclipse.ui.intro/showPage?id=concept3">
+<a href="https://github.com/senatov/smapper">
 	<img border="0" src="link_obj.gif" alt="Concept3" />
-	Learn about Concept Three...</a>
+	Source code...</a>
 </body>
 </html>
