--- a/smapper.plugin1/content/root.xhtml
+++ b/smapper.plugin1/content/root.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>root.xhtml</title>
+  <title>Intro</title>
   <link rel="stylesheet" href="shared.css" type="text/css" />
   <link rel="stylesheet" href="root.css" type="text/css" />
   </head>
