--- a/smapper.plugin1/content/root.xhtml
+++ b/smapper.plugin1/content/root.xhtml
@@ -2,20 +2,27 @@
        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Intro</title>
-<link rel="stylesheet" href="shared.css" type="text/css" />
-</head>
-<body
-	style="color: #627AAD; background-color: #E0E0E0; background-attachment: fixed">
-	<h3>Welcome to Smapper Instagramm Tool</h3>
-	<ol>
-		<li><a href="https://www.instagram.com/developer/">Instagram Developer Guide</a><span /></li>
-		<li><a href="https://github.com/senatov/smapper">Learn how Smapper works...</a><span /></li>
-	</ol>
-	<p>
-		<img alt="" height="256" src="256x256.png" width="256" />
-	</p>
-	<p class="bootloader_c_I_m" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Intro</title>
+  <link rel="stylesheet" href="shared.css" type="text/css" />
+  <link rel="stylesheet" href="root.css" type="text/css" />
+  </head>
+
+<body> 
+<h1>Welcome to Smapper Instagramm Tool</h1>
+<div class="page-style">
+  <div id="content"> 	
+	
+		<a href="http://org.eclipse.ui.intro/showPage?id=concept1" id="firstLink">
+			<img border="0" src="link_obj.gif" alt="Concept1" />
+			Learn about Instagramm Web Services... 
+		</a>
+	
+		<a href="http://org.eclipse.ui.intro/showPage?id=concept2">
+			<img border="0" src="link_obj.gif" alt="Concept2" />
+			Learn how Smapper works...</a>
+	<anchor id="anchor1" /> 
+  </div> 
+</div>
 </body>
 </html>
